cabal-version: 1.12


name:           FileManager
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/FileManager#readme>
homepage:       https://github.com/githubuser/FileManager#readme
bug-reports:    https://github.com/githubuser/FileManager/issues
author:         Vorobev Aleksandr
build-type:     Simple
extra-source-files:
    README.md

library
  exposed-modules:
      FSInit, FSTypes, FSException, Parser, FileSystem, FSSave
  other-modules:
      Paths_FileManager
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , directory
    , process
    , optparse-applicative
    , mtl
    , split
    , safe
    , text
    , time
    , filepath
    , bytestring
    , utf8-string
    , rainbow
  default-language: Haskell2010

executable FileManager-exe
  main-is: Main.hs
  other-modules:
      Paths_FileManager
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , FileManager
    , directory
    , process
    , optparse-applicative
    , mtl
    , text
    , rainbow
  default-language: Haskell2010

test-suite FileManager-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      ParserSpec, FileSystemSpec, FSExample
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , FileManager
    , hspec
    , optparse-applicative
    , utf8-string
    , mtl
  default-language: Haskell2010
